--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sample Landing Page</title>
 </head>
 <body>
-    <div class="container">
+    <!-- This the main container for the page -->
+    <div class="container">  
+        <!-- This is the container for the header or top box main elements -->
         <div class="header">
+            <!-- This is the container for the header and logo-->
             <div class="header-top">
-                <h1>Header Logo</h1>
+                <h1 id="logo">Header Logo</h1>
                 <ul>
                     <li><a href="">header link one</a></li>
                     <li><a href="">header link two</a></li>
@@ -17,18 +21,21 @@
                 </ul>
             </div>
         
+            <!--This is the continer for the main and secondary text, button and image placeholder -->
             <div class="header-body">
+                <!-- This is the container for main and secondary text and button-->
                 <div class="header-text">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that 
+                    <h1 id="subheader">This website is awesome</h1>
+                    <p id="subheader-text">This website has some subtext that 
                         goes here under the main title. It's
                         a smaller font and the color is lower
                         contrast
                     </p>
                     <button>Sign Up</button>
                 </div>
+                <!-- This is a container for image -->
                 <div class="header-image">
-                    <h1>this is a placeholder for an image</h1>
+                    <h1 id="placeholder">this is a placeholder for an image</h1>
                 </div>
             </div>
        </div> 
