Altered index and style. And added am image for landing page

--- a/index.html
+++ b/index.html
@@ -8,37 +8,31 @@
 </head>
 <body>
     <!-- This the main container for the page -->
-    <div class="container">  
-        <!-- This is the container for the header or top box main elements -->
-        <div class="header">
-            <!-- This is the container for the header and logo-->
+    <div class="container">
+        <div class="section1">
             <div class="header-top">
-                <h1 id="logo">Header Logo</h1>
+                <h1 id="Logo">Header Logo</h1>
                 <ul>
                     <li><a href="">header link one</a></li>
                     <li><a href="">header link two</a></li>
                     <li><a href="">header link three</a></li>
                 </ul>
             </div>
-        
-            <!--This is the continer for the main and secondary text, button and image placeholder -->
             <div class="header-body">
-                <!-- This is the container for main and secondary text and button-->
-                <div class="header-text">
-                    <h1 id="subheader">This website is awesome</h1>
-                    <p id="subheader-text">This website has some subtext that 
-                        goes here under the main title. It's
-                        a smaller font and the color is lower
+                <div class="right"> 
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext
+                        that goes here under the main title. 
+                        It's a smaller font and the color is lower
                         contrast
                     </p>
-                    <button>Sign Up</button>
-                </div>
-                <!-- This is a container for image -->
-                <div class="header-image">
-                    <h1 id="placeholder">this is a placeholder for an image</h1>
+                    <button>Sign Up</button>                    
+                </div>        
+                <div class="left">
+                    
                 </div>
             </div>
-       </div> 
+        </div>
     </div>
 </body>
 </html>
