Completed box or section 1 of landing page

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             </div>
             <div class="header-body">
                 <div class="right"> 
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext
+                    <h1 id="hero-main">This website is awesome</h1>
+                    <p id="hero-sub">This website has some subtext
                         that goes here under the main title. 
                         It's a smaller font and the color is lower
                         contrast
                     </p>
-                    <button>Sign Up</button>                    
+                    <button id="SignUp">Sign Up</button>                    
                 </div>        
                 <div class="left">
-                    
+                    <img src="business.jpg" alt="People Working">
                 </div>
             </div>
         </div>
