Added box or section 2 of landing page in index and half way completed of css of section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
                 </div>
             </div>
         </div>
+        <div class="section2">
+                <h1 id="body-main">Some random information</h1>
+            <div class="body-body">
+                <div class="box-text1">
+                    <div class="box one"></div>
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="box-text2">
+                    <div class="box two"></div>
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="box-text3">
+                    <div class="box three"></div>
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="box-text4">
+                    <div class=" box four"></div>
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
