--- a/index.html
+++ b/index.html
@@ -38,20 +38,31 @@
             <div class="body-body">
                 <div class="box-text box-text1">
                     <div class="box one"></div>
-                    <p>This is some subtext under an illustration or image</p>
+                    <p id="subtext">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="box-text box-text2">
                     <div class="box two"></div>
-                    <p>This is some subtext under an illustration or image</p>
+                    <p id="subtext">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="box-text box-text3">
                     <div class="box three"></div>
-                    <p>This is some subtext under an illustration or image</p>
+                    <p id="subtext">This is some subtext under an illustration or image</p>
                 </div>
                 <div class="box-text box-text4">
                     <div class=" box four"></div>
-                    <p>This is some subtext under an illustration or image</p>
+                    <p id="subtext">This is some subtext under an illustration or image</p>
                 </div>
+            </div>
+        </div>
+        <div class="section3">
+            <div class="quote">
+                <p>
+                    This is an inspiring quote, or a 
+                    testimonial from a customer. Maybe it's just
+                    filling up space, or maybe people will actually
+                    read it. Who knows? All I know is that it looks nice.
+                </p>
+                <h2>-Thor, God of Thunder</h2>
             </div>
         </div>
     </div>
