--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
     <title>Sample Landing Page</title>
 </head>
 <body>
@@ -64,6 +65,21 @@
                 </p>
                 <h2>-Thor, God of Thunder</h2>
             </div>
+        </div>
+        
+        <div class="section4">
+            <div class="action">
+                <div class="action-text">
+                    <h2>Call to action it's time!</h2>
+                    <p> Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button id="SignUp2">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Copyright</p>
+            <i class="ri-copyright-line"></i> 
+            <p>The Odin Project 2021</p>
         </div>
     </div>
 </body>
